kustomize/parlasite-xi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parlasite-xi
  labels:
    app: parlasite-xi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parlasite-xi
  template:
    metadata:
      labels:
        app: parlasite-xi
    spec:
      containers:
        - name: parlasite-xi
          image: parlasite-hrvaska
          ports:
            - containerPort: 3066
          resources:
            requests:
              memory: 400Mi
              cpu: 100m
            limits:
              memory: 400Mi
              cpu: 100m
