kustomize/parlasite-xi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parlasite-xi
spec:
  selector:
    app: parlasite-xi
  ports:
    - protocol: TCP
      port: 3066
      targetPort: 3066
