kustomize/parlasite-xi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parlasite-xi
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - parlametar.hr
        - www.parlametar.hr
      secretName: parlasite-xi-tls
  rules:
    - host: parlametar.hr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: parlasite-xi
                port:
                  number: 3066
    - host: www.parlametar.hr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: parlasite-xi
                port:
                  number: 3066
